adding ms and title

--- a/DOM/newClock/index.html
+++ b/DOM/newClock/index.html
@@ -10,15 +10,15 @@
 
 <body>
   <div class="container">
-    <div class="clock hour">
-      
-    </div>
+    <div class="clock hour"></div>
     <div class="clock second-tick">
       :
     </div>
-    <div class="clock minute">
-      
-    </div>
+    <div class="clock minute"></div>
+    <div class="clock milisec"></div>
+  </div>
+  <div class="lead">
+    everything takes <span>time</span>
   </div>
 </body>
 <script src="script.js" type="text/javascript" charset="utf-8"></script>
