--- a/DOM/EventListener/index.html
+++ b/DOM/EventListener/index.html
@@ -6,7 +6,8 @@
     <title>Event Listener</title>
 </head>
 <body>
-    <button class="btn">Click Me</button>
+    <button class="btn">Random Number</button>
+    <p id="result"></p>
     <script src="script.js"></script>
 </body>
 </html>
