--- a/DOM/EventListener/index.html
+++ b/DOM/EventListener/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Listener</title>
+    <style>
+        .card-container {
+            display: flex;
+            width: 500px;
+            flex-wrap: wrap;
+        }
+        .card {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 2px solid #000;
+            width: 50px;
+            height: 50px;
+            box-sizing: border-box;
+        }
+    </style>
 </head>
 <body>
     <button class="btn">Random Number</button>
     <p id="result"></p>
+    <button class="add-card">Add Card</button>
+    <div class="card-container">
+    </div>
+    <button class="remove-card">Remove Card</button>
     <script src="script.js"></script>
 </body>
 </html>
