add counter feature

--- a/DOM/togelSims/index.html
+++ b/DOM/togelSims/index.html
@@ -14,6 +14,8 @@
   <input type="number" name="num" id="num" placeholder="input number range 1-10" />
   <button class="lock">Lock Number</button>
   <button class="send">Play</button>
+  <p>Attempt: <span class="attempt"></span></p>
+  <p>Win: <span class="win"></span></p>
   <script src="script.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
