add event delegation

--- a/DOM/EventListener/index.html
+++ b/DOM/EventListener/index.html
@@ -26,6 +26,9 @@
     <p id="result"></p>
     <button class="add-card">Add Card</button>
     <div class="card-container">
+      <div class="card">
+        1
+      </div>
     </div>
     <button class="remove-card">Remove Card</button>
     <script src="script.js"></script>
