--- a/DOM/index.html
+++ b/DOM/index.html
@@ -21,7 +21,7 @@
             <div class="row">
               <form id="task-form">
                 <div class="input-field col s12">
-                  <input type="text" name="task" id="task" value="Walk the dog">
+                  <input type="text" name="task" id="task" autocomplete="off">
                   <label for="task">New Task</label>
                 </div>
             </div>
@@ -31,7 +31,7 @@
           <div class="card-action">
             <h5 id="task-title">Tasks</h5>
             <ul class="collection">
-              <li class="collection-item">
+              <!-- <li class="collection-item">
                 List Item
                 <a href="#" class="delete-item secondary-content">
                   <i class="fa fa-remove"></i>
@@ -58,7 +58,7 @@
               <li class="collection-item">
                 List Item
                 <a href="#" class="delete-item secondary-content">
-                  <i class="fa fa-remove"></i>
+                  <i class="fa fa-remove"></i> -->
                 </a>
               </li>
             </ul>
