--- a/DOM/index.html
+++ b/DOM/index.html
@@ -58,9 +58,9 @@
               <li class="collection-item">
                 List Item
                 <a href="#" class="delete-item secondary-content">
-                  <i class="fa fa-remove"></i> -->
+                  <i class="fa fa-remove"></i>
                 </a>
-              </li>
+              </li> -->
             </ul>
             <a class="clear-tasks btn black" href="#">Clear Tasks</a>
           </div>
