fixing footer boldness

--- a/project-listApp/index.html
+++ b/project-listApp/index.html
@@ -41,7 +41,7 @@
         <button class="btn btn-sm btn-outline-danger">Delete All</button>      
         <!--End Body-->
       </div>
-      <div class="card-footer text-muted text-center"> Made by Zulham
+      <div class="card-footer text-muted text-center"> Made by <span class="font-weight-bold">Zulham</span>
       </div>
     <!--End Card-->
     </div>
