fix bug on invalid break

--- a/project-listApp/index.html
+++ b/project-listApp/index.html
@@ -16,7 +16,7 @@
         <form accept-charset="utf-8">
           <div class="form-group">
             <label for="content">New Task</label>
-            <input type="text" class="form-control" id="content" autocomplete="off">
+            <input type="text" class="form-control" id="content" autocomplete="off" required>
             <small id="emailHelp" class="form-text text-muted">You can put everything here</small>
           </div>
           <input class="btn btn-primary btn-block" type="submit" value="Save">
