add filter function

--- a/project-listApp/index.html
+++ b/project-listApp/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>List App</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="./css/style.css" type="text/css" media="all" />
 </head>
 
 <body>
@@ -22,6 +23,7 @@
           <input class="btn btn-primary btn-block" type="submit" value="Save">
         </form>
         <p class="lead mt-4">Task List</p>
+        <input class="form-control form-control-sm mb-3" type="text" placeholder="filter results">
         <ul class="list-group mb-2">
           <!--<li class="list-group-item d-flex justify-content-between align-items-center">Cras justo odio
             <a href="#" class="badge badge-pill badge-danger">x</a>
