--- a/project-listApp/index.html
+++ b/project-listApp/index.html
@@ -24,7 +24,7 @@
         </form>
         <p class="lead mt-4">Task List</p>
         <input class="form-control form-control-sm mb-3" type="text" placeholder="filter results">
-        <ul class="list-group mb-2">
+        <ul class="list-group list-group-flush mb-2">
           <!--<li class="list-group-item d-flex justify-content-between align-items-center">Cras justo odio
             <a href="#" class="badge badge-pill badge-danger">x</a>
           </li>-->
