--- a/project-listApp/index.html
+++ b/project-listApp/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>List App</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" type="text/css" media="all" />
     <link rel="stylesheet" href="./css/style.css" type="text/css" media="all" />
 </head>
 
@@ -39,6 +40,8 @@
     <!--End Card-->
     </div>
   </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="./js/script.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
