--- a/project-loanCalculator/index.html
+++ b/project-loanCalculator/index.html
@@ -48,6 +48,18 @@
           <button class="btn btn-light">Reset</button>
         </div>
         <!--Result-->
+        <hr />
+        <h3 class="mb-3">Result</h3>
+        <!--Total Payment-->
+        <div class="d-flex justify-content-between">
+          <p class="text-muted">Total Payment</p>
+          <p class="font-weight-bold">Rp.100000</p>
+        </div>
+          <!--Monthly Payment-->
+        <div class="d-flex justify-content-between">
+          <p class="text-muted">Monthly Payment</p>
+          <p class="font-weight-bold">Rp.10000</p>
+        </div>
       </div>
       <!--End Card Body-->
       <div class="card-footer text-muted text-center"> Made by <span class="font-weight-bold">Zulham</span>
