--- a/project-loanCalculator/index.html
+++ b/project-loanCalculator/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css" type="text/css" media="all" />
     <title>Loan Calculator</title>
     <style type="text/css" media="all">
-      .hider, .result {
+      .hider, .result, .alert {
         display: none;
       }
     </style>
