remove reset button and change calc button to block

--- a/project-loanCalculator/index.html
+++ b/project-loanCalculator/index.html
@@ -49,10 +49,10 @@
         </div>
         <!--Button Action-->
         <div class="text-center">
-          <button id="calc" class="btn btn-secondary mr-2">
+          <button id="calc" class="btn btn-block btn-secondary mr-2">
             <span class="hider spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
             Calculate</button>
-          <button id="reset" class="btn btn-light">Reset</button>
+          <!--<button id="reset" class="btn btn-light">Reset</button>-->
         </div>
         <!--Result-->
         <div class="result">
