working on submit and delete - UI

--- a/project-ListOOP/index.html
+++ b/project-ListOOP/index.html
@@ -20,17 +20,17 @@
       <!--Issues-->
       <div class="form-group">
         <label for="issue">Issue</label>
-        <input type="text" class="form-control" id="issue" placeholder="unexpected error in #34">
+        <input type="text" class="form-control" id="issue" placeholder="unexpected error in #34" autocomplete="off">
       </div>
       <!--Category-->
       <div class="form-group">
         <label for="category">Category</label>
-        <input type="text" class="form-control" id="category" placeholder="bug / improvement">
+        <input type="text" class="form-control" id="category" placeholder="bug / improvement" autocomplete="off">
       </div>      
       <!--Assigner-->
       <div class="form-group">
         <label for="assigner">Assigner</label>
-        <input type="text" class="form-control" id="assigner">
+        <input type="text" class="form-control" id="assigner" autocomplete="off">
       </div>
       <!--Submit button-->
       <input class="btn btn-block btn-primary" type="submit" name="submit" id="submit" value="Submit" />
@@ -54,7 +54,7 @@
           <td>Bug found in line #58</td>
           <td>Otto</td>
           <td>Bug</td>
-          <td><a href="#">delete</a></td>
+          <td><a href="#" class="del">delete</a></td>
         </tr>
       </tbody>
     </table>
