--- a/project-ListOOP/index.html
+++ b/project-ListOOP/index.html
@@ -17,6 +17,8 @@
     </div>
     <!--End Header-->
     <form class="mt-2 mb-4">
+      <!-- Hidden ID -->
+      <input type="hidden" name="id" id="id">
       <!--Issues-->
       <div class="form-group">
         <label for="issue">Issue</label>
