--- a/AJAX/chuck-jokes/index.html
+++ b/AJAX/chuck-jokes/index.html
@@ -29,6 +29,7 @@
             </div>
         </div>
     </div>
+    <script src="app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
 </html>
