margin for spinner

--- a/AJAX/gender-AI/index.html
+++ b/AJAX/gender-AI/index.html
@@ -45,7 +45,7 @@
     <h5>Result</h5>
     <!--Spinner-->
     <div class="d-flex justify-content-center">
-      <div class="spinner-border text-primary hidden" role="status" id=loader></div>    
+      <div class="spinner-border text-primary mb-3 hidden" role="status" id=loader></div>    
     </div>
     <table class="table table-striped hidden">
       <tbody>
