add explanation to this in XHR

--- a/AJAX/test/index.html
+++ b/AJAX/test/index.html
@@ -10,7 +10,7 @@
 <body>
     <button>Request Data</button>
     <h1></h1>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
