--- a/AJAX/gender-AI/index.html
+++ b/AJAX/gender-AI/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/jscodeplay/project-ListOOP/css/bootstrap.min.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="bootstrap.min.css" type="text/css" media="all" />
     <title>Predict Gender</title>
     <style type="text/css" media="all">
       .hidden {
@@ -77,7 +77,7 @@
       </tbody>
     </table>
   </div>
-  <script src="app.js" type="text/javascript" charset="utf-8"></script>
+  <script src="fetch-app.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
 </html>
