refactor using async/await

--- a/AJAX/gender-AI/index.html
+++ b/AJAX/gender-AI/index.html
@@ -77,7 +77,7 @@
       </tbody>
     </table>
   </div>
-  <script src="fetch-app.js" type="text/javascript" charset="utf-8"></script>
+  <script src="async.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
 </html>
