Promise inside object

--- a/AJAX/Promises/index.html
+++ b/AJAX/Promises/index.html
@@ -6,6 +6,6 @@
     <title>Promise</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <script src="Promise.js"></script>
 </body>
 </html>
