--- a/AJAX/ajaxlib/index.html
+++ b/AJAX/ajaxlib/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="ajax.js"></script>
+    <script src="async.js"></script>
     <script src="app.js"></script>
 </body>
 
