fixing for github profile project

--- a/project-TwitterAPI/index.html
+++ b/project-TwitterAPI/index.html
@@ -9,6 +9,10 @@
         .result.container {
             padding: 0;
         }
+
+        p {
+            line-height: 0.5;
+        }
     </style>
 </head>
 <body class="bg-secondary">
@@ -18,7 +22,7 @@
             <!-- card body -->
             <div class="card-body">
                 <!-- title -->
-                <h4 class="card-title text-center text-monospace mb-4">Twitter Profile Search API</h4>
+                <h4 class="card-title text-center text-monospace mb-4">GitHub Search Profile</h4>
                 <!-- search form -->
                 <input type="text" name="query" id="query" class="form-control mb-2" placeholder="ex: zulhamsy">
                 <input type="submit" value="Search" class="btn btn-info btn-block">
@@ -33,13 +37,13 @@
                             </div>
                             <!-- Information -->
                             <div class="col-7">
-                                <h5>Zulham Syafrawi</h5>
                                 <p class="text-muted">@zulhamsy</p>
                                 <span class="badge badge-primary">20 Following</span>
                                 <span class="badge badge-success">22 Follower</span>
-                                <span class="badge badge-secondary">140 Tweets</span>
+                                <span class="badge badge-secondary">9 Public Repos</span>
                             </div>
                         </div>
+                        <!-- Latest Repos -->
                     </div>
                 </div>
             </div>
