base logic done

--- a/project-WeatherApp/index.html
+++ b/project-WeatherApp/index.html
@@ -17,13 +17,13 @@
     </div>
     <!-- Location Info -->
     <div class="loc-wrapper container">
-      <p id="city-name">Jakarta, Indonesia</p>
-      <p id="date">Sunday, 10 July 2020</p>
+      <p id="city-name"></p>
+      <p id="date"></p>
     </div>
     <!-- Weather Info -->
     <div class="weather-wrapper container">
-      <p id="current-temp">15<span id="deg">°c</span></p>
-      <p id="weather-text">Rain</p>
+      <p id="current-temp"></p>
+      <p id="weather-text"></p>
     </div>
   </div>
   <script src="core.js"</script>
