adding alert and error handling fix

--- a/project-WeatherApp/index.html
+++ b/project-WeatherApp/index.html
@@ -6,9 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather App Vanilla JS</title>
   <link rel="stylesheet" href="style.css">
+  <style type="text/css" media="all">
+    .hidden {
+      display: none;
+    }
+    
+    .block {
+      display: block;
+    }
+  </style>
 </head>
 
 <body>
+  <!--Alert-->
+  <div class="alert hidden"></div>
   <!-- App Wrapper -->
   <div class="main container">
     <!-- Input Wrapper -->
