--- a/project-WeatherApp/index.html
+++ b/project-WeatherApp/index.html
@@ -8,11 +8,11 @@
   <link rel="stylesheet" href="style.css">
   <style type="text/css" media="all">
     .hidden {
-      display: none;
+      opacity: 0;
     }
     
     .block {
-      display: block;
+      opacity: 1;
     }
   </style>
 </head>
