--- a/project-FormValidate/index.html
+++ b/project-FormValidate/index.html
@@ -2,38 +2,37 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Validate</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Form Validate</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="container-md pt-4">
-        <form>
-            <div class="form-group">
-                <label for="fullname">Full Name</label>
-                <input type="text" class="form-control is-invalid" id="fullname">
-                <div class="invalid-feedback">Looks not a valid name, huh?</div>
-                <div class="valid-feedback">Looks good!</div>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control is-invalid" id="email">
-                <div class="invalid-feedback">Please provide a valid email</div>
-                <div class="valid-feedback">Looks good!</div>
-            </div>
-            <div class="form-group">
-                <label for="fullname">Full Name</label>
-                <input type="text" class="form-control is-invalid" id="fullname">
-                <div class="invalid-feedback">Looks not a valid name, huh?</div>
-                <div class="valid-feedback">Looks good!</div>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-    <script src="script.js"></script>
+  <div class="container-md pt-4">
+    <form>
+      <div class="form-group">
+        <label for="fullname">Full Name</label>
+        <input type="text" class="form-control" id="fullname">
+        <div class="invalid-feedback">Looks not a valid name, huh?</div>
+        <div class="valid-feedback">Looks good!</div>
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" id="email">
+        <div class="invalid-feedback">Please provide a valid email</div>
+        <div class="valid-feedback">Looks good!</div>
+      </div>
+      <div class="form-group">
+        <label for="phone">Phone Number</label>
+        <input type="number" class="form-control" id="phone">
+        <div class="invalid-feedback">Please provide a valid phone number</div>
+        <div class="valid-feedback">Looks good!</div>
+      </div>
+      <button type="submit" class="btn btn-block btn-dark" disabled>Submit</button>
+    </form>
+  </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
