add mediator design pattern

--- a/Pattern/observer-test/index.html
+++ b/Pattern/observer-test/index.html
@@ -16,7 +16,7 @@
       <div id="invalid" class="invalid-feedback d-inline"></div>
       <small id="comm-length" class="form-text text-muted float-right">0/100</small>
     </div>
-    <button class="btn btn-primary mt-3" type="submit">Tweet</button>
+    <button class="btn btn-primary btn-block mt-5" type="submit">Tweet</button>
   </div>
   <script src="app.js" type="text/javascript" charset="utf-8"></script>
 </body>
