--- a/Pattern/index.html
+++ b/Pattern/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <script src="mediator.js" type="text/javascript" charset="utf-8"></script>
+  <script src="state2.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
 </html>
