finishing UI - mini project Broken TrafficLight

--- a/Pattern/observer-test/mini-project-state/index.html
+++ b/Pattern/observer-test/mini-project-state/index.html
@@ -2,23 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Broken Traffic Light</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Broken Traffic Light</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="container">
-        <!-- Red Light -->
-        <div class="circle red"></div>
-        <!-- Yellow Light -->
-        <div class="circle yellow"></div>
-        <!-- Green Light -->
-        <div class="circle green"></div>
-        <!-- Button Control -->
+  <div class="container">
+    <!-- Red Light -->
+    <div class="circle red"></div>
+    <!-- Yellow Light -->
+    <div class="circle yellow"></div>
+    <!-- Green Light -->
+    <div class="circle green"></div>
+    <!-- Button Control -->
+    <div class="controller">
+    	<button id="btn-one" class="btn btn-danger">stop</button>
+    	<button id="btn-two" class="btn btn-success">go</button>
     </div>
-    <script src="app.js"></script>
+  </div>
+  <script src="app.js"></script>
 </body>
 
 </html>
