finish Broken Traffic Light

--- a/Pattern/observer-test/mini-project-state/index.html
+++ b/Pattern/observer-test/mini-project-state/index.html
@@ -11,15 +11,14 @@
 <body>
   <div class="container">
     <!-- Red Light -->
-    <div class="circle red"></div>
+    <div id="red" class="circle"></div>
     <!-- Yellow Light -->
-    <div class="circle yellow"></div>
+    <div id="yellow" class="circle"></div>
     <!-- Green Light -->
-    <div class="circle green"></div>
+    <div id="green" class="circle"></div>
     <!-- Button Control -->
     <div class="controller">
-    	<button id="btn-one" class="btn btn-danger">stop</button>
-    	<button id="btn-two" class="btn btn-success">go</button>
+    	<button id="action-btn" class="btn btn-warning">prepare to go</button>
     </div>
   </div>
   <script src="app.js"></script>
